--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
   <section id="home" class="hero">
     <h2>Your imagination, our creation.</h2>
     <p>We build immersive Roblox maps with care, quality, and creativity.</p>
+    <div style="height: 500px;"></div>
   </section>
 
   <section id="order" class="form-section">
@@ -50,11 +51,13 @@
 
       <button type="submit">Submit Order</button>
     </form>
+    <div style="height: 500px;"></div>
   </section>
 
   <section id="contact" class="contact-section">
     <h2>📬 Contact Us</h2>
     <p>Email us anytime at <a href="mailto:mapfactory363@gmail.com">mapfactory363@gmail.com</a></p>
+    <div style="height: 500px;"></div>
   </section>
 
   <section id="reviews" class="reviews-section">
@@ -62,6 +65,7 @@
     <p>⭐⭐⭐⭐⭐ – “Great service, amazing maps!”</p>
     <p>⭐⭐⭐⭐ – “Quick delivery and friendly!”</p>
     <p>⭐⭐⭐⭐⭐ – “Loved it! Will order again.”</p>
+    <div style="height: 500px;"></div>
   </section>
 
   <footer>
