--- a/index.html
+++ b/index.html
@@ -1,71 +1,70 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>MapFactory - Build Your Dream World in Roblox</title>
-
-  <!-- Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
-
-  <!-- External CSS -->
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>MapFactory - Build Your Dream World</title>
   <link rel="stylesheet" href="style.css">
-
-  <!-- External JS -->
   <script defer src="script.js"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&family=Poppins:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
+  <div class="background-animation"></div>
   <header>
     <img src="logo-transparent.png" alt="MapFactory Logo">
-    <h1>MapFactory</h1>
-    <p class="tagline">Build Your Dream World in Roblox</p>
+    <h1 data-en="MapFactory" data-ar="مصنع الخرائط">MapFactory</h1>
+    <p class="tagline" data-en="Build your dream world in Roblox" data-ar="اصنع عالم أحلامك في روبلوكس">Build your dream world in Roblox</p>
     <nav>
       <button onclick="scrollToSection('home')">Home</button>
       <button onclick="scrollToSection('order')">Order Map</button>
       <button onclick="scrollToSection('contact')">Contact</button>
       <button onclick="scrollToSection('reviews')">Reviews</button>
+      <button onclick="toggleLanguage()">🌐 عربي / EN</button>
     </nav>
   </header>
 
   <section id="home" class="hero">
-    <h2>Your imagination, our creation.</h2>
-    <p>We build immersive Roblox maps with care, quality, and creativity.</p>
-    <div style="height: 500px;"></div>
+    <h2 data-en="Your imagination, our creation." data-ar="خيالك، نحن نُجسده">Your imagination, our creation.</h2>
+    <p data-en="We build immersive Roblox maps with care, quality, and creativity." data-ar="نصمم خرائط روبلوكس بجودة وإبداع واحترافية">We build immersive Roblox maps with care, quality, and creativity.</p>
+    <div style="height: 300px;"></div>
   </section>
 
-  <section id="order" class="form-section">
-    <h2>🛠️ Order a Custom Map</h2>
-    <form action="https://formsubmit.co/mapfactory363@gmail.com" method="POST">
-      <label>Map Type:</label>
-      <input type="text" name="map_type" required />
-
-      <label>Details:</label>
-      <textarea name="details" required></textarea>
-
-      <label>Your Email:</label>
-      <input type="email" name="email" required />
-
-      <input type="hidden" name="_captcha" value="false">
-      <input type="hidden" name="_next" value="https://mapfactory121.github.io/mapfactory-site/thanks.html">
-
-      <button type="submit">Submit Order</button>
-    </form>
-    <div style="height: 500px;"></div>
+  <section id="order">
+    <h2 data-en="🛠️ Order a Custom Map" data-ar="🛠️ اطلب خريطة مخصصة">🛠️ Order a Custom Map</h2>
+    <div class="container">
+      <form target="_blank" action="https://formsubmit.co/mapfactory363@gmail.com" method="POST">
+        <div class="form-group">
+          <div class="form-row">
+            <div class="col">
+              <input type="text" name="name" class="form-control" placeholder="Full Name / الاسم الكامل" required>
+            </div>
+            <div class="col">
+              <input type="email" name="email" class="form-control" placeholder="Email Address / البريد الإلكتروني" required>
+            </div>
+          </div>
+        </div>
+        <div class="form-group">
+          <textarea placeholder="Describe your game / صف لعبتك" class="form-control" name="message" rows="10" required></textarea>
+        </div>
+        <input type="hidden" name="_captcha" value="false">
+        <input type="hidden" name="_next" value="https://mapfactory121.github.io/mapfactory-site/thanks.html">
+        <button type="submit" class="btn btn-lg btn-dark btn-block">Send / إرسال</button>
+      </form>
+    </div>
   </section>
 
-  <section id="contact" class="contact-section">
-    <h2>📬 Contact Us</h2>
-    <p>Email us anytime at <a href="mailto:mapfactory363@gmail.com">mapfactory363@gmail.com</a></p>
-    <div style="height: 500px;"></div>
+  <section id="contact">
+    <h2 data-en="📬 Contact Us" data-ar="📬 تواصل معنا">📬 Contact Us</h2>
+    <p>Email: <a href="mailto:mapfactory363@gmail.com">mapfactory363@gmail.com</a></p>
+    <div style="height: 300px;"></div>
   </section>
 
-  <section id="reviews" class="reviews-section">
-    <h2>🌟 Reviews</h2>
-    <p>⭐⭐⭐⭐⭐ – “Great service, amazing maps!”</p>
-    <p>⭐⭐⭐⭐ – “Quick delivery and friendly!”</p>
-    <p>⭐⭐⭐⭐⭐ – “Loved it! Will order again.”</p>
-    <div style="height: 500px;"></div>
+  <section id="reviews">
+    <h2 data-en="🌟 Reviews" data-ar="🌟 آراء العملاء">🌟 Reviews</h2>
+    <p>⭐⭐⭐⭐⭐ – “Amazing maps and fast service!”</p>
+    <p>⭐⭐⭐⭐ – “Easy to order and high quality.”</p>
+    <p>⭐⭐⭐⭐⭐ – “Loved it! Will buy again.”</p>
+    <div style="height: 300px;"></div>
   </section>
 
   <footer>
